# TEST-GOOD

./: .coveragerc  .dockerignore  .env  .env.example  .env.ops_stabilization  .env.production  .env.sample  .gitattributes  .gitignore  .pre-commit-config.yaml  .system_check_cache.pkl  1_WSL_설치.ps1  3_프로젝트_설치.sh  AI_CHAT_DOCS.md  ASSET_QUERY_GUIDE.md  CHANGELOG.md  CHAT_INTERFACE_IMPROVEMENT.md  CLAUDE.md  CLEANUP_COMPLETE.md  CODE_IMPROVEMENTS.md  COMPLETE_SYSTEM.md  CURRENT_SYSTEM_STATUS.md  DEPLOYMENT_COMPLETE.md  DOCKER_사용법.md  DOCKER_초간단_가이드.md  Dockerfile  Dockerfile.optimized  E2E_SMOKE_TEST_REPORT.md  FACADE_STABILITY_PATCH_REPORT.md  FINAL_OPTIMIZATION_RESULTS.md  FINAL_P1_COMPLETION_REPORT.md  FOLDER_STRUCTURE.md  HOW_TO_RUN.md  IMPROVEMENT_PLAN.md  INSTALLATION_GUIDE.md  INTEGRATION_LOG_20250929.md  INVESTIGATION_REPORT.md  LICENSES.md  MAINTENANCE_GUIDE.md  MIGRATION_GUIDE.md  (+282 more)
.github/: CODEOWNERS
app/: __init__.py  alerts.py
archived/: system_analysis.py  test_adaptive_cot.py  test_ai_answer.py  test_system.py
backup_final_20250926_130345/: content_search.py  perfect_rag.py  setup_tests.py
backup_legacy/: asset_cache.py  build_index.py  cache_improvements.py  document_metadata_cache.py  document_speed_optimizer.py  download_models.py  enhanced_indexing_system.py  improve_answer_quality.py  improved_sidebar.py  metadata_cache_manager.py  optimize_perfect_rag.py  organize_docs.py  pdf_extraction_fix.py  preindex_documents.py  setup.bat  setup.sh  setup_wsl2_network.bat  simple_sidebar.py  validate_migration.py
cache/: preload.db  query_cache.db
components/: __init__.py  chat_interface.py  document_preview.py  pdf_viewer.py  sidebar_library.py
config/: CLAUDE.md  README.md  README_SETUP.md  document_processing.yaml  filters.yaml  filters.yaml.v0.bak  indexing.py  llm_optimization.yaml  performance.yaml  performance.yaml.v0.bak  query_expansion.yaml  requirements.txt  router_keywords.yaml  router_keywords.yaml.v0.bak
docs/: .ocr_cache.json  ARCHITECTURE.md  ASKABLE_QUERIES.md  AS_IS_TREE.txt  CACHE-USAGE-v2.md  CLAIMED_TOTAL_REPORT.md  CURRENT_QA_FLOW_ANALYSIS.md  DOCS_INTAKE_REPORT.md  E2E_RESPONSES.md  E2E_STATUS.md  ENTRYPOINT_HITS.txt  EXECUTION_FLOW.md  GO_NOGO_STATUS.md  IMPORT_GRAPH.txt  IMPROVEMENTS_2025-10-24.md  MERGE_PROPOSAL.md  MONITORING-ExactMatch-v2.md  OPERATIONS.md  OPERATION_GUIDE.md  OPS_CHECKLIST.md  PHASE2_IMPLEMENTATION_SUMMARY.md  PR_APPROVAL_FINAL.md  QA_FIX_COMPLETE_REPORT.md  QA_PROBLEM_DIAGNOSIS.md  RAG_Context_Hotfix_20251028_1620.md  RECLASSIFY_REPORT.md  REFACTORING_PLAN.md  REINDEX_RUNBOOK.md  REPO_CLEANUP_REPORT.md  RUNBOOK.md  SESSION_SUMMARY_20251027.md  SNAPSHOT_DB.json  SNAPSHOT_FS.json  SYSTEM_OVERVIEW.md  TUNING_REPORT_프린트뷰전용.md  USAGE_CANDIDATES.json  USAGE_MAP.md  USAGE_STATUS.json  USAGE_STATUS_SUMMARY.md  offline_deployment.md
docs_archive/: REFACTORING_LOG.md  SYSTEM_ARCHITECTURE.md  TEST_REPORT.md  cleanup_plan.md
experiments/: hybrid_chat_rag_v2.py
helm/: Chart.yaml  values.yaml
models/: README_MODEL_DOWNLOAD.md
modules/: amount_parser_v2.py  cache_module.py  document_module.py  intent_module.py  llm_module.py  metadata_db.py  metadata_extractor.py  ocr_processor.py  optimized_llm.py  reranker.py  response_formatter.py  search_module.py  search_module_hybrid.py  statistics_module.py
monitoring/: __init__.py  alerting.py  dashboard.py  metrics_collector.py  performance_profiler.py
old_docs/: CLAUDE.md  CLEANUP_PLAN.md  COMPLETE_FILE_INVENTORY.md  CURRENT_SYSTEM_STATUS.md  DOCKER_MIGRATION_SIMPLE.md  README.md  SYSTEM_FLOW_EXPLANATION.md  초보자_실행_가이드.md  초보자_이전_가이드.md
ops/: start_services.sh
rag_core/: __init__.py  config.py  exceptions.py
rag_system/: __init__.py  bm25_store.py  document_compression.py  enhanced_ocr_processor.py  file_index.json  file_index.json.backup_20251029_151046  hybrid_search.py  korean_reranker.py  korean_vector_store.py  llm_singleton.py  llm_singleton.py.bak  llm_wrapper.py  logging_config.py  metadata_extractor.py  multilevel_filter.py  query_expansion.py  query_optimizer.py  qwen_llm.py  qwen_llm.py.bak2
reports/: AUDIT_FINAL_STATUS.md  AUDIT_PROGRESS.md  DEPS_AUDIT.md  INGEST_DIAG_REPORT.md  RAG_QA_REPORT_20251031.json  RAG_QA_REPORT_20251031.md  REPO_AUDIT_SUMMARY.md  SECURITY_FIXES_APPLIED.md  USAGE_AUDIT.md  anomaly_report_20251110_153011.txt  askable_queries_validation_20251030_140100.json  askable_queries_validation_20251030_140100.md  askable_queries_validation_20251030_140322.json  askable_queries_validation_20251030_140322.md  askable_queries_validation_20251030_140407.json  askable_queries_validation_20251030_140407.md  askable_queries_validation_20251030_140620.json  (+50 more)
(+304 files in other folders)
